--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.5.4'
-	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.springframework.boot' version '3.3.0'
+	id 'io.spring.dependency-management' version '1.1.5'
 }
 
 group = 'com.example'
@@ -34,13 +34,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
-
-	// SpringDoc에서 commons-lang3의 취약한 버전을 제외하고,
-	// 안전한 버전을 직접 명시하여 사용합니다.
-	implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.12') {
-		exclude group: 'org.apache.commons', module: 'commons-lang3'
-	}
-	implementation 'org.apache.commons:commons-lang3:3.18.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 }
 
 tasks.named('test') {
